<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_cppserial</name>
  <version>0.0.1</version>
  <description>C++ interface for serial devices</description>
  <maintainer email="roza.gkliva@ttu.ee">Roza Gkliva</maintainer>
  <license>Apache-2.0</license>

  <depend>ros2_serial_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
